--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@
                   <div class="projeto-links">
                      <a href="https://shelf-space.netlify.app/" target="_blank" class="demo">
                         <img src="./img/icons/link.svg">
-                        Ver demo</a>
+                        Ver demo
+                     </a>
                      <a href="https://github.com/laiongabriel/shelfspace" target="_blank" class="rep">
                         <img src="./img/icons/github.svg" width="24" height="24">
-                        Repositório</a>
+                        Repositório
+                     </a>
                   </div>
                </div>
             </div>
@@ -119,48 +121,6 @@
                         <img src="./img/icons/link.svg">
                         Ver demo</a>
                      <a href="https://github.com/laiongabriel/ai-chatbot" target="_blank" class="rep">
-                        <img src="./img/icons/github.svg" width="24" height="24">
-                        Repositório</a>
-                  </div>
-               </div>
-            </div>
-
-            <div class="projeto">
-               <div class="projeto-img">
-                  <img src="./img/project-preview/bikcraft-preview.png">
-               </div>
-               <div class="projeto-desc">
-                  <h2>Bikcraft</h2>
-                  <p>Empresa fictícia que desenvolve bicicletas personalizadas para seus clientes. Projeto desenvolvido
-                     durante o curso de
-                     HTML e CSS da Origamid.</p>
-                  <div class="projeto-links">
-                     <a href="https://laiongabriel.github.io/bikcraft/" target="_blank" class="demo">
-                        <img src="./img/icons/link.svg">
-                        Ver demo
-                     </a>
-                     <a href="https://github.com/laiongabriel/bikcraft" target="_blank" class="rep">
-                        <img src="./img/icons/github.svg" width="24" height="24">
-                        Repositório</a>
-                  </div>
-               </div>
-            </div>
-
-            <div class="projeto">
-               <div class="projeto-img">
-                  <img src="./img/project-preview/dogs.png">
-               </div>
-               <div class="projeto-desc">
-                  <h2>Dogs</h2>
-                  <p>Rede social fictícia para cachorros. Utiliza uma API REST para implementar um sistema de login e
-                     contas, além da biblioteca Victory para criar gráficos com base nas estatísticas dos usuários.
-                     Foi desenvolvido durante o curso de React da Origamid.</p>
-                  <div class="projeto-links">
-                     <a href="https://amazingdogs.netlify.app/" target="_blank" class="demo">
-                        <img src="./img/icons/link.svg">
-                        Ver demo
-                     </a>
-                     <a href="https://github.com/laiongabriel/dogs" target="_blank" class="rep">
                         <img src="./img/icons/github.svg" width="24" height="24">
                         Repositório</a>
                   </div>
